force-app/main/default/objects/Match__c/fields/Score_1__c.field-meta.xml
<CustomField>
    <fullName>Score_1__c</fullName>
    <label>Score 1</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>