force-app/main/default/objects/Match__c/fields/Team_1__c.field-meta.xml
<CustomField>
    <fullName>Team_1__c</fullName>
    <label>Team 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>