force-app/main/default/objects/Match__c/fields/Team_2__c.field-meta.xml
<CustomField>
    <fullName>Team_2__c</fullName>
    <label>Team 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>